--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "datatables.net": "^2.1.2",
+        "datatables.net-dt": "^2.1.2"
     }
 }
